# basis_set_exchange

./: .buildinfo  .codecov.yml  .coverage  .gitignore  .lgtm.yml  .travis.yml  .yapfignore  CHANGELOG  ISSUES  LICENSE  MANIFEST.in  README  README.md  augmentation.html  bse_cli.html  bsecurate_cli.html  bundling.html  calendarization.html  compare_basis.py  conversion.html  convert.py  convert_xml.py  convert_xml_agg.py  create_simple_agg.py  developer.html  developer_api.html  developer_converters.html  developer_curate.html  developer_faq.html  developer_readers.html  developer_refconverters.html  developer_writers.html  dunning_mod.html  genindex.html  index.html  minimal_sets.html  objects.inv  project_doc.html  py-modindex.html  pyproject.toml  (+10 more)
_sources/: bse_cli.rst.txt  bsecurate_cli.rst.txt  bundling.rst.txt  conversion.rst.txt  developer.rst.txt  developer_api.rst.txt  developer_converters.rst.txt  developer_curate.rst.txt  developer_writers.rst.txt  dunning_mod.rst.txt  index.rst.txt  minimal_sets.rst.txt  project_doc.rst.txt  usage.rst.txt  user_api.rst.txt
basis/: 6-31g.bas  6-31g.json  6-31gs.bas  6-31gs.json  6-31gs_pol.json  6-31gss.bas  6-31gss.json  6-31gss_pol.json
basis_set_exchange/: __init__.py  _version.py  api.py  bundle.py  compose.py  conftest.py  convert.py  fileio.py  ints.py  lut.py  manip.py  memo.py  misc.py  notes.py  printing.py  pytest.ini  references.py  skel.py  sort.py  validator.py
bse/: __init__.py  api.py  basis_io.py  basis_manip.py  compose.py  element_map.txt  fileio.py  io.py  lut.py  manip.py  memo.py  notes.py  (+2 more)
(+11306 files in other folders)
